# agentanycast-python

./: .cursorrules  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  README.md  SECURITY.md  llms.txt  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
examples/: anycast_routing.py  claude_agent.py  crewai_agent.py  hello_world.py  strands_agent.py
src/agentanycast/: __init__.py  _grpc_client.py  card.py  daemon.py  did.py  exceptions.py  mcp.py  mcp_server.py  node.py  task.py
src/agentanycast/_generated/: .proto-hash
src/agentanycast/_generated/agentanycast/v1/: a2a_models_pb2.py  agent_card_pb2.py  common_pb2.py  federation_pb2.py  federation_pb2_grpc.py  node_service_pb2.py  node_service_pb2_grpc.py  registry_service_pb2.py  registry_service_pb2_grpc.py  streaming_pb2.py
src/agentanycast/adapters/: __init__.py  _base.py  adk.py  claude_agent.py  crewai.py  langgraph.py  openai_agents.py  strands.py
src/agentanycast/cli/: __init__.py  main.py  mcp.py
src/agentanycast/compat/: __init__.py  a2a_v1.py  agntcy.py  oasf.py
tests/: test_a2a_compat.py  test_adapters.py  test_agntcy.py  test_card.py  test_cli.py  test_daemon.py  test_did.py  test_exceptions.py  test_integration_phase6.py  test_mcp.py  test_new_adapters.py  test_node.py  test_oasf_compat.py  test_task.py
tests/integration/: conftest.py  test_anycast.py  test_api.py  test_bridge.py  test_docker_e2e.py  test_e2e.py  test_federation.py  test_health.py  test_nats.py  test_p2p.py  test_registry.py
